fix list spacing

--- a/src/main/resources/no/ntnu/idatt1002/demo/style/style.css
+++ b/src/main/resources/no/ntnu/idatt1002/demo/style/style.css
@@ -285,6 +285,11 @@ White button
     -fx-background-color: -fx-primary-color;
 }
 
+.list-item-attribute {
+    -fx-min-width: 100px;
+    -fx-max-width: 100px;
+}
+
 /*
 #####################################
                 Popup                
